added app page details

--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,13 @@
 @import "tailwindcss";
 @plugin "daisyui";
+
+.loader {
+  border-top-color: #4f46e5;
+  -webkit-animation: spin 1s linear infinite;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
