added pages file

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,16 @@
-@import "tailwindcss";
-@plugin "daisyui";
+
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 .loader {
-  border-top-color: #4f46e5;
-  -webkit-animation: spin 1s linear infinite;
-  animation: spin 1s linear infinite;
+  border-top-color: #4f46e5;
+  -webkit-animation: spin 1s linear infinite;
+  animation: spin 1s linear infinite;
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
